migrate more experimental css

--- a/pages/test.html
+++ b/pages/test.html
@@ -8,7 +8,7 @@
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
-        <link href="../styles/test.css" media="all" rel="stylesheet" type="text/css">
+        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -18,6 +18,25 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
+        <div class="iphone">
+            <header class="mini">
+                <div class="mastr">
+                    <button class="share holdon">+</button>
+                    <img align="left" alt="Sibos_2013" class="rube" src="../images/mobile/rube.png" width="32">
+                    <h1 class="">Sibos 2013</h1>
+                    <img align="left" alt="Visit" class="" src="../images/mobile/events_hi.png" width="300">
+                </div>
+                <nav>
+                    <h2 class="chevar"><a class="" href="#Compositions_Home">Home</a></h2>
+                    <h2 class="chevar"><a class="" href="#Compositions_Visit">Visit our booth</a></h2>
+                    <h2 class="chevar"><a class="" href="#Compositions_About">About Wells Fargo</a></h2>
+                    <h2 class="chevar"><a class="" href="#Compositions_Explore">Explore Osaka</a></h2>
+                    <h2 class="chevar"><a href="#Compositions_Pubs">Publications</a></h2>
+                    <h2 class="chevar"><a href="#Compositions_Giving">Charitable giving</a></h2>
+                    <h2 class="chevar"><a href="#Compositions_Photos">Gallery</a></h2>
+                </nav>
+            </header>
+        </div>
         <div id="Page">
             <header>
                 <div class="mast">
@@ -38,24 +57,6 @@
                 <section id="Banner">
                     <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
                 </section>
-                <div class="iphone">
-                    <header class="mini">
-                        <div class="mast"><button class="share holdon">+</button><img align="left" alt="Sibos_2013" class="rube" src="./mobile/rube.png" width="32">
-                            <h1 class="">Sibos 2013</h1><img align="left" alt="Visit" class="" src="./mobile/bani.png" width="300"></div>
-                        <nav>
-                            <h1 class="chevar"><a class="active" href="#Support">Support</a></h1>
-                            <h1 class="chevar"><a class="active" href="#Components">Components</a></h1>
-                            <h2 class="chevar"><a class="" href="#Compositions_Home">Home</a></h2>
-                            <h2 class="chevar"><a class="" href="#Compositions_Visit">Visit our booth</a></h2>
-                            <h2 class="chevar"><a class="" href="#Compositions_About">About Wells Fargo</a></h2>
-                            <h2 class="chevar"><a class="" href="#Compositions_Explore">Explore Osaka</a></h2>
-                            <h2 class="chevar"><a href="#Compositions_Pubs">Publications</a></h2>
-                            <h2 class="chevar"><a href="#Compositions_Giving">Charitable giving</a></h2>
-                            <h2 class="chevar"><a href="#Compositions_Photos">Gallery</a></h2>
-                        </nav>
-                    </header>
-                </div>
-                <img class="reins small" src="../images/header/reins.png" alt="">
                 <p class="shrink">*You may need a reader to view PDF files. <a
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
             </div>
@@ -74,6 +75,7 @@
             </footer>
         </div>
         <p>&nbsp;</p>
+        <img class="reins small" src="../images/header/reins.png" alt="">
         <p>&nbsp;</p>
     </body>
 </html>
