rediv as mobile

--- a/pages/test.html
+++ b/pages/test.html
@@ -18,15 +18,22 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-        <div class="iphone">
+        <div id="Mobile">
             <header class="mini">
-                <div class="mastr">
+                <div class="mast">
                     <button class="share holdon">+</button>
                     <img align="left" alt="Sibos_2013" class="rube" src="../images/mobile/rube.png" width="32">
                     <h1 class="">Sibos 2013</h1>
                     <img align="left" alt="Visit" class="" src="../images/mobile/events_hi.png" width="300">
                 </div>
                 <nav>
+                    <!--  --> <a href="./home.html">Home</a>
+                    <!--  --> <a href="./about.html">About Wells Fargo</a>
+                    <!--  --> <a href="./events.html">Sibos Events</a>
+                    <!--  --> <a href="./booth.html">Our Booth</a>
+                    <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                    <!--  --> <a href="./explore.html">Explore Dubai</a>
+                    <!--  --> <a href="./giving.html">Charitable giving</a>
                     <h2 class="chevar"><a class="" href="#Compositions_Home">Home</a></h2>
                     <h2 class="chevar"><a class="" href="#Compositions_Visit">Visit our booth</a></h2>
                     <h2 class="chevar"><a class="" href="#Compositions_About">About Wells Fargo</a></h2>
