--- a/pages/test.html
+++ b/pages/test.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="Mobile">
-            <header class="mini">
+            <header class="port">
                 <div class="mast">
                     <button class="share holdon">+</button>
                     <img align="left" alt="Sibos_2013" class="rube" src="../images/mobile/rube.png" width="32">
