--- a/pages/booth.html
+++ b/pages/booth.html
@@ -90,7 +90,7 @@
                     but does not endorse and is not responsible for the content, links, privacy policy, or security policy of this website.</p>
             </div>
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
                         <!--  --> <span id="st_twitter"></span>
                         <!--  --> <span id="st_linkedin"></span>
