--- a/pages/events.html
+++ b/pages/events.html
@@ -98,7 +98,7 @@
                 </table>
             </div>
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
                         <!--  --> <span id="st_twitter"></span>
                         <!--  --> <span id="st_linkedin"></span>
