--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -97,7 +97,7 @@
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
             </div>
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
                         <!--  --> <span id="st_twitter"></span>
                         <!--  --> <span id="st_linkedin"></span>
