--- a/pages/giving.html
+++ b/pages/giving.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
                         <!--  --> <span id="st_twitter"></span>
                         <!--  --> <span id="st_linkedin"></span>
