customer final edits

--- a/pages/events.html
+++ b/pages/events.html
@@ -30,7 +30,7 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
             <div id="Feature">
@@ -43,14 +43,10 @@
                         <td colspan="5"><h2>Sibos Events</h2>
                             <article>
                                 <p>Renew friendships and create new ones.
-                                    We&rsquo;re proud to be hosting our annual Sibos
-                                    Celebration reception at Dubai&rsquo;s most
-                                    prestigious landmark – Burj Khalifa – the tallest
-                                    structure in the world. In addition, we&rsquo;ll
-                                    be hosting a welcome reception at the Wells Fargo
-                                    Sibos booth and a breakfast seminar on
-                                    &ldquo;Rapidly evolving payment and trade
-                                    corridors.&rdquo;</p>
+                                    We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
+                                    most prestigious landmark – Burj Khalifa – the tallest structure in the world.
+                                    In addition, we&rsquo;ll be hosting a welcome reception at the Wells Fargo Sibos booth
+                                    and a breakfast seminar on the &ldquo;Rapidly evolving payment and trade corridors.&rdquo;</p>
                             </article></td>
                     </tr>
                     <tr>
@@ -69,7 +65,6 @@
                         <td>
                         <td class="blocks"><p><strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
-                                Booth Reception <br>
                                 Wells Fargo booth No. F87, <br>
                                 Exhibition Hall Zone B </p></td>
                         <td>
