--- a/pages/giving.html
+++ b/pages/giving.html
@@ -30,7 +30,7 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
             <div id="Feature">
@@ -197,28 +197,28 @@
                     <br>
                     <img id="charity_BreadTin" src="../images/photos/charity_BreadTin.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo volunteer, Loretta Wong (far left)
+                    Wells Fargo London branch volunteer Loretta Wong (left) with her giving club members and core donor.
                 </div>
                 <div class="popup">
                     CLICK OUTSIDE IMAGE TO CLOSE<br>
                     <br>
                     <img id="charity_ARC" src="../images/photos/charity_ARC.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo DIFC branch volunteer, Adel el-Huni
+                    Wells Fargo DIFC branch volunteer, Adel el-Huni, on the ARC trip to Sudan.
                 </div>
                 <div class="popup">
                     CLICK OUTSIDE IMAGE TO CLOSE<br>
                     <br>
                     <img id="charity_DubaiCenter" src="../images/photos/charity_DubaiCenter.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo DIFC branch volunteers, including Dalene Byrnes (far right)
+                    Wells Fargo DIFC branch volunteers, including Dalene Byrnes (far right).
                 </div>
                 <div class="popup">
                     CLICK OUTSIDE IMAGE TO CLOSE<br>
                     <br>
                     <img id="charity_ProjectVietnam" src="../images/photos/charity_ProjectVietnam.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo volunteer, Linh Trinh (second from left)
+                    Project Vietnam Foundation volunteers provide pediatric healthcare in Vietnam.
                 </div>
             </div>
             <footer>
