--- a/pages/test.html
+++ b/pages/test.html
@@ -33,13 +33,13 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                     <h2 class="chevar"><a class="" href="#Compositions_Home">Home</a></h2>
                     <h2 class="chevar"><a class="" href="#Compositions_Visit">Visit our booth</a></h2>
                     <h2 class="chevar"><a class="" href="#Compositions_About">About Wells Fargo</a></h2>
                     <h2 class="chevar"><a class="" href="#Compositions_Explore">Explore Osaka</a></h2>
                     <h2 class="chevar"><a href="#Compositions_Pubs">Publications</a></h2>
-                    <h2 class="chevar"><a href="#Compositions_Giving">Charitable giving</a></h2>
+                    <h2 class="chevar"><a href="#Compositions_Giving">Charitable Giving</a></h2>
                     <h2 class="chevar"><a href="#Compositions_Photos">Gallery</a></h2>
                 </nav>
             </header>
@@ -57,7 +57,7 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
             <div id="Feature" style="display: none;">
