--- a/pages/home.html
+++ b/pages/home.html
@@ -30,7 +30,7 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
             <div id="Feature">
@@ -79,14 +79,13 @@
                             <p>We’re proud to be hosting our annual Sibos Celebration reception at Dubai’s most prestigious
                                 landmark – Burj Khalifa – the tallest structure in the world.
                                 In addition, we’ll be hosting a welcome reception at the Wells Fargo Sibos booth and a
-                                breakfast seminar on “Rapidly evolving payment and trade corridors.” </p></td>
+                                breakfast seminar on the “Rapidly evolving payment and trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
                                 <img src="../images/tiles/home_getInvolved.jpg" width="225" height="121">
                             </p>
                             <p><strong>By working together</strong>, we can make a difference in our international communities. </p>
-                            <p>You are invited, for the third year in a row, to cast a vote for one of four nonprofits that
-                                make a difference around the world. </p></td>
+                            <p>For the third year in a row, you will be invited to cast your vote for one of four nonprofits to receive a grant for up to $10,000. </p></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
