--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -30,7 +30,7 @@
                     <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
             <div id="Feature">
