--- a/pages/xindex.html
+++ b/pages/xindex.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; URL=http://www.wellsfargomedia.com/sibos2013/pages/home.html" />
+<meta http-equiv="Refresh" content="0; URL=./home.html" />
