use responsive for ie

--- a/pages/home.html
+++ b/pages/home.html
@@ -42,6 +42,7 @@
                     <img class="fade bnr3" src="../images/banners/giveaway_ochre.jpg"   alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
                     <img class="fade bnr2" src="../images/banners/pony.jpg"             alt="Share your pony story with us #WFPony">
                     <img class="fade bnr1" src="../images/banners/home.png"             alt="JOIN US IN DUBAI September 16 – 19, 2013">
+                    <img class="" src="../images/banners/charitableGivingPage.jpg" alt="" style="visibility: hidden;">
                     <img class="reins large" src="../images/header/reins.png">
                 </section>
                 <table>
