--- a/pages/test.html
+++ b/pages/test.html
@@ -18,14 +18,15 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
+        <img src="../mini.png" width="496" height="531" alt="Mini">
         <div id="Mobile">
-            <header class="port">
-                <div class="mast">
+            <section class="port">
+                <header>
                     <button class="share holdon">+</button>
                     <img align="left" alt="Sibos_2013" class="rube" src="../images/mobile/rube.png" width="32">
                     <h1 class="">Sibos 2013</h1>
                     <img align="left" alt="Visit" class="" src="../images/mobile/events_hi.png" width="300">
-                </div>
+                </header>
                 <nav>
                     <!--  --> <a href="./home.html">Home</a>
                     <!--  --> <a href="./about.html">About Wells Fargo</a>
@@ -34,15 +35,8 @@
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
                     <!--  --> <a href="./giving.html">Charitable Giving</a>
-                    <h2 class="chevar"><a class="" href="#Compositions_Home">Home</a></h2>
-                    <h2 class="chevar"><a class="" href="#Compositions_Visit">Visit our booth</a></h2>
-                    <h2 class="chevar"><a class="" href="#Compositions_About">About Wells Fargo</a></h2>
-                    <h2 class="chevar"><a class="" href="#Compositions_Explore">Explore Osaka</a></h2>
-                    <h2 class="chevar"><a href="#Compositions_Pubs">Publications</a></h2>
-                    <h2 class="chevar"><a href="#Compositions_Giving">Charitable Giving</a></h2>
-                    <h2 class="chevar"><a href="#Compositions_Photos">Gallery</a></h2>
                 </nav>
-            </header>
+            </section>
         </div>
         <div id="Page">
             <header>
