--- a/pages/home.html
+++ b/pages/home.html
@@ -67,7 +67,7 @@
                             <p><a title="Booth map" href="booth.html">
                                     <img src="../images/tiles/comeSeeUs.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
-                            <p><a title="Momentum Magazine" href="../media/momentum.pdf">
+                            <p><a title="Momentum Magazine" href="../media/Momentum_Sibos2013.pdf">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine" style="margin-bottom: -2em;">
                                 </a></p>
                         </td>
