--- a/pages/test.html
+++ b/pages/test.html
@@ -22,13 +22,14 @@
         <div id="Mobile">
             <section class="port">
                 <header>
-                    <button class="share holdon">+</button>
-                    <img align="left" alt="Sibos_2013" class="rube" src="../images/mobile/rube.png" width="32">
-                    <h1 class="">Sibos 2013</h1>
-                    <img align="left" alt="Visit" class="" src="../images/mobile/events_hi.png" width="300">
+                    <div class="logobar">
+                        <img title="Wells Fargo" src="../images/misc/wftype.png">
+                    </div>
+                    <h1>Sibos Dubai <button class="share">+</button></h1>
                 </header>
+                <h3>SEPTEMBER 1 – 19, 2013</h3>
+                <img class="banner" src="../images/mobile/booth_hi.png">
                 <nav>
-                    <!--  --> <a href="./home.html">Home</a>
                     <!--  --> <a href="./about.html">About Wells Fargo</a>
                     <!--  --> <a href="./events.html">Sibos Events</a>
                     <!--  --> <a href="./booth.html">Our Booth</a>
@@ -36,8 +37,17 @@
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
                     <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
+                <img class="reins" src="../images/header/reins.png" alt="">
+                <footer>
+                    <p><a>Full site</a> | <strong>Mobile site</strong> <br>
+                        © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                </footer>
             </section>
         </div>
+
+
+
+
         <div id="Page">
             <header>
                 <div class="mast">
@@ -61,22 +71,8 @@
                 <p class="shrink">*You may need a reader to view PDF files. <a
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
             </div>
-            <footer>
-                <div id="Share">
-                    <p class="cap">Share this page
-                        <!--  --> <span id="st_twitter"></span>
-                        <!--  --> <span id="st_linkedin"></span>
-                        <!--  --> <span id="st_email"></span>
-                        <!--  --> <span id="st_facebook"></span>
-                        <!--  --> <span id="st_googleplus"></span>
-                        <!--  --> <span id="st_pinterest"></span>
-                    </p>
-                </div>
-                <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-            </footer>
         </div>
         <p>&nbsp;</p>
-        <img class="reins small" src="../images/header/reins.png" alt="">
         <p>&nbsp;</p>
     </body>
 </html>
