--- a/pages/test.html
+++ b/pages/test.html
@@ -18,33 +18,6 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-        <img src="../mini.png" width="496" height="531" alt="Mini">
-        <div id="Mobile">
-            <section class="port">
-                <header>
-                    <div class="logobar">
-                        <img title="Wells Fargo" src="../images/misc/wftype.png">
-                    </div>
-                    <h1>Sibos Dubai <button class="share">+</button></h1>
-                </header>
-                <h3>SEPTEMBER 1 – 19, 2013</h3>
-                <img class="banner" src="../images/mobile/booth_hi.png">
-                <nav>
-                    <!--  --> <a href="./about.html">About Wells Fargo</a>
-                    <!--  --> <a href="./events.html">Sibos Events</a>
-                    <!--  --> <a href="./booth.html">Our Booth</a>
-                    <!--  --> <a href="./speakers.html">Sibos Speakers</a>
-                    <!--  --> <a href="./explore.html">Explore Dubai</a>
-                    <!--  --> <a href="./giving.html">Charitable Giving</a>
-                </nav>
-                <img class="reins" src="../images/header/reins.png" alt="">
-                <footer>
-                    <p><a>Full site</a> | <strong>Mobile site</strong> <br>
-                        © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
-                </footer>
-            </section>
-        </div>
-
 
 
 
@@ -64,15 +37,38 @@
                     <!--  --> <a href="./giving.html">Charitable Giving</a>
                 </nav>
             </header>
-            <div id="Feature" style="display: none;">
-                <section id="Banner">
-                    <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
-                </section>
-                <p class="shrink">*You may need a reader to view PDF files. <a
-                        href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
-            </div>
         </div>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
+
+
+
+        <div id="Mobile"><section class="port">
+                <header>
+                    <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
+                    <h1>Sibos Dubai <button class="share">+</button></h1>
+                </header>
+                <article>
+                    <h3>SEPTEMBER 1 – 19, 2013</h3>
+                    <img class="banner" src="../images/mobile/booth_hi.png">
+                    <nav>
+                        <!--  --> <a href="./about.html">About Wells Fargo</a>
+                        <!--  --> <a href="./events.html">Sibos Events</a>
+                        <!--  --> <a href="./booth.html">Our Booth</a>
+                        <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                        <!--  --> <a href="./explore.html">Explore Dubai</a>
+                        <!--  --> <a href="./giving.html">Charitable Giving</a>
+                    </nav>
+                </article>
+                <footer>
+                    <img class="reins" src="../images/header/reins.png" alt="">
+                    <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                </footer>
+            </section></div>
+
+
+
+        <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
+
+
+
     </body>
 </html>
