foundation for tranfer

--- a/pages/test.html
+++ b/pages/test.html
@@ -50,12 +50,12 @@
                     <h3>SEPTEMBER 1 – 19, 2013</h3>
                     <img class="banner" src="../images/mobile/booth_hi.png">
                     <nav>
-                        <!--  --> <a href="./about.html">About Wells Fargo</a>
-                        <!--  --> <a href="./events.html">Sibos Events</a>
-                        <!--  --> <a href="./booth.html">Our Booth</a>
+                        <!--  --> <a href="./booth.html">Visit Our Booth</a>
+                        <!--  --> <a href="./events.html">Calendar of Events</a>
                         <!--  --> <a href="./speakers.html">Sibos Speakers</a>
-                        <!--  --> <a href="./explore.html">Explore Dubai</a>
                         <!--  --> <a href="./giving.html">Charitable Giving</a>
+                        <!--  --> <a href="./explore.html">Explore Dubai</a>
+                        <!--  --> <a href="./about.html">About Wells Fargo</a>
                     </nav>
                 </article>
                 <footer>
