--- a/pages/giving.html
+++ b/pages/giving.html
@@ -8,6 +8,7 @@
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
+        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -235,5 +236,37 @@
             <br>
             Project Vietnam Foundation volunteers provide pediatric healthcare in Vietnam.
         </div>
+
+
+
+        <div id="Mobile"><section class="port">
+                <header>
+                    <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
+                    <h1>Sibos Dubai <button class="share">+</button></h1>
+                </header>
+                <article>
+                    <h3>SEPTEMBER 1 – 19, 2013</h3>
+                    <img class="banner" src="../images/mobile/booth_hi.png">
+                    <nav>
+                        <!--  --> <a href="./booth.html">Visit Our Booth</a>
+                        <!--  --> <a href="./events.html">Calendar of Events</a>
+                        <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                        <!--  --> <a href="./giving.html">Charitable Giving</a>
+                        <!--  --> <a href="./explore.html">Explore Dubai</a>
+                        <!--  --> <a href="./about.html">About Wells Fargo</a>
+                    </nav>
+                </article>
+                <footer>
+                    <img class="reins" src="../images/header/reins.png" alt="">
+                    <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                </footer>
+            </section></div>
+
+
+
+        <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
+
+
+
     </body>
 </html>
