load mobile dummy

--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -111,37 +111,6 @@
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
         </div>
-
-
-
-        <div id="Mobile"><section class="port">
-                <header>
-                    <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
-                    <h1>Sibos Dubai <button class="share">+</button></h1>
-                </header>
-                <article>
-                    <h3>SEPTEMBER 1 – 19, 2013</h3>
-                    <img class="banner" src="../images/mobile/booth_hi.png">
-                    <nav>
-                        <!--  --> <a href="./booth.html">Visit Our Booth</a>
-                        <!--  --> <a href="./events.html">Calendar of Events</a>
-                        <!--  --> <a href="./speakers.html">Sibos Speakers</a>
-                        <!--  --> <a href="./giving.html">Charitable Giving</a>
-                        <!--  --> <a href="./explore.html">Explore Dubai</a>
-                        <!--  --> <a href="./about.html">About Wells Fargo</a>
-                    </nav>
-                </article>
-                <footer>
-                    <img class="reins" src="../images/header/reins.png" alt="">
-                    <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
-                </footer>
-            </section></div>
-
-
-
-        <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
-
-
-
+        <div id="Mobile"></div>
     </body>
 </html>
