--- a/lib/navport.html
+++ b/lib/navport.html
@@ -8,7 +8,8 @@
         <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div id="Mobile"><section class="port">
+        <div id="Mobile">
+            <section class="port">
                 <header>
                     <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
                     <h1>Sibos Dubai <button class="share">+</button></h1>
@@ -29,7 +30,8 @@
                     <img class="reins" src="../images/header/reins.png" alt="">
                     <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
                 </footer>
-            </section></div>
+            </section>
+        </div>
         <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
     </body>
 </html>
