key extraction off of mini (not article)

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="3"><article>
+                        <td rowspan="3"><article class="mini">
                                 <p>Wells Fargo is one of the largest banks in the United States,
                                     and is the most valuable bank in the world in terms of market capitalization.
                                     Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
@@ -74,7 +74,7 @@
                             <p>&nbsp;</p></td>
                     </tr>
                     <tr>
-                        <td><article>
+                        <td><article class="mini">
                             <p><strong>Our global presence includes: </strong></p>
                             <ul>
                                 <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
