--- a/pages/booth.html
+++ b/pages/booth.html
@@ -46,7 +46,7 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td><article>
+                        <td><article class="mini">
                                 <p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth
                                     experience like no other. We look forward to seeing you at
                                     <strong>booth No. F87</strong>.</p>
