--- a/pages/giving.html
+++ b/pages/giving.html
@@ -54,7 +54,7 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td><article>
+                        <td><article class="mini">
                                 <p> At Wells Fargo, we&rsquo;re
                                     committed to providing community solutions – local
                                     responses to local needs. We promote economic
@@ -103,7 +103,7 @@
                             </div></td>
                     </tr>
                     <tr>
-                        <td><article>
+                        <td><article class="mini">
                                 <div id="bread">
                                     <h3>The Bread Tin</h3>
                                     <p>
