--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@
                 </section>
                 <table>
                     <tr>
-                        <td colspan="5"><article>
+                        <td colspan="5"><article class="mini">
                                 <p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial
                                     Institutions (GFI) team has an exciting program lined up for you during the week of the conference,
                                     and we look forward to seeing you in Dubai.</p>
