--- a/pages/events.html
+++ b/pages/events.html
@@ -42,7 +42,7 @@
                 <table>
                     <tr>
                         <td colspan="5"><h2>Sibos Events</h2>
-                            <article>
+                            <article class="mini">
                                 <p>Renew friendships and create new ones.
                                     We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
                                     most prestigious landmark – Burj Khalifa – the tallest structure in the world.
