--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -41,16 +41,16 @@
                 </section>
                 <table>
                     <tr>
-                        <td colspan="3"><h2>Sibos Speakers</h2>
+                        <td class="mini" colspan="3"><h2>Sibos Speakers</h2>
                             <p><strong>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</strong></p></td>
                     </tr>
                     <tr>
-                        <td class="blocks ribron"><h3>Mobile banking</h3>
+                        <td class="blocks mini ribron"><h3>Mobile banking</h3>
                         <td>&nbsp;</td>
-                        <td class="blocks ribron"><h3>Risk management</h3></td>
+                        <td class="blocks mini ribron"><h3>Risk management</h3></td>
                     </tr>
                     <tr>
-                        <td class="blocks"><p> <strong>New technologies that improve the customer experience</strong><br>
+                        <td class="mini blocks"><p> <strong>New technologies that improve the customer experience</strong><br>
                                 Tuesday, September 17<br>
                                 4:00 pm to 5:00 pm<br>
                                 Conference room 3 - CR3</p>
@@ -64,7 +64,7 @@
                                 gamification and social media to improve the customer
                                 experience. </p>
                         <td>&nbsp;</td>
-                        <td class="blocks"><p> <strong>From grapple to grip</strong><br>
+                        <td class="mini blocks"><p> <strong>From grapple to grip</strong><br>
                                 Wednesday, September 18<br>
                                 2:00 pm to 3:00 pm<br>
                                 Conference room 1 - CR1 </p>
