--- a/lib/navport.html
+++ b/lib/navport.html
@@ -11,10 +11,10 @@
         <div id="Mobile">
             <header>
                 <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
-                <h1>Sibos Dubai <button class="share">+</button></h1>
+                <h1>Sibos Dubai <img class="share" title="share" src="../images/misc/share.png"></h1>
             </header>
             <section class="port">
-                <article>
+                <article class="nav">
                     <h3>SEPTEMBER 1 – 19, 2013</h3>
                     <img class="banner" src="../images/mobile/booth_hi.png">
                     <nav>
@@ -32,6 +32,8 @@
                 <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
+
         <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
+
     </body>
 </html>
