--- a/pages/nav.html
+++ b/pages/nav.html
@@ -4,8 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title>navport</title>
+        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
+        <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
+        <script src="/lib/jquery/1.8.2/jquery.js"></script>
+        <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
+        <!--[if IE]><script>
+            window.isIE = true;
+            $(function(){ $('html').addClass('msie'); });
+            </script><![endif]-->
+        <script src="../scripts/load.js"></script>
     </head>
     <body>
         <div id="Mobile">
@@ -14,7 +23,7 @@
                 <h1>Sibos Dubai <img class="share" title="share" src="../images/misc/share.png"></h1>
             </header>
             <section class="port">
-                <article class="nav">
+                <article>
                     <h3>SEPTEMBER 1 – 19, 2013</h3>
                     <img class="banner" src="../images/mobile/booth_hi.png">
                     <nav>
