border color dev only

--- a/pages/nav.html
+++ b/pages/nav.html
@@ -17,7 +17,7 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-        <div id="Mobile">
+        <div id="Mobile" class="dev">
             <header>
                 <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
                 <h1>Sibos Dubai <img class="share" title="share" src="../images/misc/share.png"></h1>
