classify mobile content

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
                 </section>
                 <table>
                     <tr>
-                        <td><h2>About Wells Fargo</h2></td>
+                        <td class="mini"><h2>About Wells Fargo</h2></td>
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
@@ -58,7 +58,7 @@
                                     and non-bank financial institutions in the markets where we conduct business.</p>
                             </article></td>
                         <td rowspan="2">&nbsp;</td>
-                        <td valign="top" class="blocks"><h3><span>Resources</span></h3>
+                        <td class="blocks mini"><h3><span>Resources</span></h3>
                             <p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
