--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -77,7 +77,7 @@
                         How can they benchmark their policies and procedures with global best practices? </p></td>
                     </tr>
                     <tr>
-                        <td colspan="3"><p>&nbsp;</p>
+                        <td colspan="3" class="mini"><p>&nbsp;</p>
                             <p><strong>You&rsquo;ll find more information about these
                                     sessions – including the full Sibos conference program
                                     – at <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">sibos.com</a>
