--- a/pages/events.html
+++ b/pages/events.html
@@ -41,8 +41,8 @@
                 </section>
                 <table>
                     <tr>
-                        <td colspan="5"><h2>Sibos Events</h2>
-                            <article class="mini">
+                        <td colspan="5" class="mini"><h2>Sibos Events</h2>
+                            <article>
                                 <p>Renew friendships and create new ones.
                                     We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
                                     most prestigious landmark – Burj Khalifa – the tallest structure in the world.
@@ -51,7 +51,7 @@
                             </article></td>
                     </tr>
                     <tr>
-                        <td class="blocks"><h3><span>Annual Celebration</span></h3>
+                        <td class="blocks mini"><h3><span>Annual Celebration</span></h3>
                             <p><strong>Sunday, September 15 </strong><br>
                                 <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
                                 Armani Hotel in Burj Khalifa<br>
@@ -59,14 +59,14 @@
                             </p>
                         </td>
                         <td>&nbsp;</td>
-                        <td class="blocks"><h3><span>Booth Reception</span></h3>
+                        <td class="blocks mini"><h3><span>Booth Reception</span></h3>
                             <p><strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
                                 Wells Fargo booth No. F87, <br>
                                 Exhibition Hall Zone B </p>
                         </td>
                         <td>&nbsp;</td>
-                        <td class="blocks"><h3><span>Speaker Series</span></h3>
+                        <td class="blocks mini"><h3><span>Speaker Series</span></h3>
                             <p><strong>Wednesday, September 18</strong><br>
                                 <strong>7:30 a.m. to 8:30 a.m.</strong><br>
                                 Wells Fargo Sibos Executive Speaker Series: “Rapidly Evolving Payment and Trade Corridors&rdquo;<br>
@@ -74,7 +74,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="5"><p>&nbsp;</p>
+                        <td colspan="5" class="mini"><p>&nbsp;</p>
                             <p>Please contact your Wells Fargo
                                 GFI relationship manager for more details.</p>
                         <p><strong>We hope you can join us at one of these events.</strong></p></td>
