--- a/pages/nav.html
+++ b/pages/nav.html
@@ -27,6 +27,7 @@
                     <h3>SEPTEMBER 1 – 19, 2013</h3>
                     <img class="banner" src="../images/mobile/booth_hi.png">
                     <nav>
+                        <!--  --> <a href="./home.html">Welcome</a>
                         <!--  --> <a href="./booth.html">Visit Our Booth</a>
                         <!--  --> <a href="./events.html">Calendar of Events</a>
                         <!--  --> <a href="./speakers.html">Sibos Speakers</a>
