--- a/pages/about.html
+++ b/pages/about.html
@@ -45,18 +45,16 @@
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="2"><article class="mini">
-                                <p>Wells Fargo is one of the largest banks in the United States,
-                                    and is the most valuable bank in the world in terms of market capitalization.
-                                    Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
-                                    mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
-                                    35 countries to support customers who conduct business in the global economy. </p>
-                                <p>Wells Fargo serves one in three businesses in America.
-                                    We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
-                                    financial needs and help them succeed financially. The GFI team executes this vision by serving the
-                                    increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
-                                    and non-bank financial institutions in the markets where we conduct business.</p>
-                            </article></td>
+                        <td rowspan="2" class="mini"><p>Wells Fargo is one of the largest banks in the United States,
+                                and is the most valuable bank in the world in terms of market capitalization.
+                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
+                                mortgage, consumer, and commercial finance through various distribution channels.
+                                We have offices in more than 35 countries to support customers who conduct business in the global economy. </p>
+                            <p>Wells Fargo serves one in three businesses in America.
+                                We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
+                                financial needs and help them succeed financially. The GFI team executes this vision by serving the
+                                increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
+                                and non-bank financial institutions in the markets where we conduct business.</p></td>
                         <td rowspan="2">&nbsp;</td>
                         <td class="blocks mini"><h3><span>Resources</span></h3>
                             <p><strong>Learn more about Wells Fargo</strong></p>
@@ -64,15 +62,14 @@
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/press/2q13pr.pdf">Latest earnings report</a></li>
-                        </ul></td>
+                            </ul></td>
                     </tr>
                     <tr>
                         <td><p>&nbsp;</p>
                             <p>&nbsp;</p></td>
                     </tr>
                     <tr>
-                        <td><article class="mini">
-                            <p><strong>Our global presence includes: </strong></p>
+                        <td class="mini"><p><strong>Our global presence includes: </strong></p>
                             <ul>
                                 <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
                                     Hong Kong, <br>
@@ -81,8 +78,8 @@
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
                                 <li>Customers in 125 countries</li>
                             </ul>
-                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p>
-                        </article></td>
+                            <p>To learn more, just click on one of the links below to download our brochure
+                                or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
