--- a/pages/events.html
+++ b/pages/events.html
@@ -42,13 +42,11 @@
                 <table>
                     <tr>
                         <td colspan="5" class="mini"><h2>Sibos Events</h2>
-                            <article>
-                                <p>Renew friendships and create new ones.
-                                    We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
-                                    most prestigious landmark – Burj Khalifa – the tallest structure in the world.
-                                    In addition, we&rsquo;ll be hosting a welcome reception at the Wells Fargo Sibos booth
-                                    and a breakfast seminar on the &ldquo;Rapidly evolving payment and trade corridors.&rdquo;</p>
-                            </article></td>
+                            <p>Renew friendships and create new ones.
+                                We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
+                                most prestigious landmark – Burj Khalifa – the tallest structure in the world.
+                                In addition, we&rsquo;ll be hosting a welcome reception at the Wells Fargo Sibos booth
+                                and a breakfast seminar on the &ldquo;Rapidly evolving payment and trade corridors.&rdquo;</p></td>
                     </tr>
                     <tr>
                         <td class="blocks mini"><h3><span>Annual Celebration</span></h3>
@@ -77,7 +75,7 @@
                         <td colspan="5" class="mini"><p>&nbsp;</p>
                             <p>Please contact your Wells Fargo
                                 GFI relationship manager for more details.</p>
-                        <p><strong>We hope you can join us at one of these events.</strong></p></td>
+                            <p><strong>We hope you can join us at one of these events.</strong></p></td>
                     </tr>
                     <tr>
                         <td width="33%">&nbsp;</td>
