--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
                                 increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
                                 and non-bank financial institutions in the markets where we conduct business.</p></td>
                         <td rowspan="2">&nbsp;</td>
-                        <td class="blocks mini"><h3><span>Resources</span></h3>
+                        <td class="blocks mini"><h3 class="chev"><span>Resources</span></h3>
                             <p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
