--- a/pages/events.html
+++ b/pages/events.html
@@ -49,7 +49,7 @@
                                 and a breakfast seminar on the &ldquo;Rapidly evolving payment and trade corridors.&rdquo;</p></td>
                     </tr>
                     <tr>
-                        <td class="blocks mini"><h3><span>Annual Celebration</span></h3>
+                        <td class="blocks mini"><h3 class="chev"><span>Annual Celebration</span></h3>
                             <p><strong>Sunday, September 15 </strong><br>
                                 <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
                                 Armani Hotel in Burj Khalifa<br>
@@ -57,14 +57,14 @@
                             </p>
                         </td>
                         <td>&nbsp;</td>
-                        <td class="blocks mini"><h3><span>Booth Reception</span></h3>
+                        <td class="blocks mini"><h3 class="chev"><span>Booth Reception</span></h3>
                             <p><strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
                                 Wells Fargo booth No. F87, <br>
                                 Exhibition Hall Zone B </p>
                         </td>
                         <td>&nbsp;</td>
-                        <td class="blocks mini"><h3><span>Speaker Series</span></h3>
+                        <td class="blocks mini"><h3 class="chev"><span>Speaker Series</span></h3>
                             <p><strong>Wednesday, September 18</strong><br>
                                 <strong>7:30 a.m. to 8:30 a.m.</strong><br>
                                 Wells Fargo Sibos Executive Speaker Series: “Rapidly Evolving Payment and Trade Corridors&rdquo;<br>
