--- a/pages/giving.html
+++ b/pages/giving.html
@@ -82,7 +82,7 @@
                             <div class="tofix">
                                 <table>
                                     <tr>
-                                        <td class="blocks mini"><h3><span>learn more</span></h3>
+                                        <td class="blocks mini"><h3 class="chev"><span>learn more</span></h3>
                                             <p><strong>Click on each nonprofit to learn more:</strong></p>
                                             <ul>
                                                 <li><a class="scroll" href="#bread">The Bread Tin</a> is
