--- a/pages/home.html
+++ b/pages/home.html
@@ -59,7 +59,7 @@
                     </tr>
                     <tr>
                         <td rowspan="2" class="blocks mini">
-                            <h3><span>Sibos events </span><a class="learn" href="events.html">learn more</a></h3>
+                            <h3 class="chev"><span>Sibos events </span><a class="learn" href="events.html">learn more</a></h3>
                             <p>
                                 <img src="../images/tiles/home_events.png" width="307" height="120">
                             </p>
@@ -70,7 +70,7 @@
                                 breakfast seminar on the “Rapidly evolving payment and trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td rowspan="2" class="blocks mini">
-                            <h3><span>Get involved</span><a class="learn" href="giving.html">learn more</a></h3>
+                            <h3 class="chev"><span>Get involved</span><a class="learn" href="giving.html">learn more</a></h3>
                             <p>
                                 <img src="../images/tiles/home_getInvolved.jpg" width="225" height="121">
                             </p>
