--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -45,7 +45,7 @@
                             <p><strong>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</strong></p></td>
                     </tr>
                     <tr>
-                        <td class="blocks mini"><h3><span>Mobile banking</span></h3>
+                        <td class="blocks mini"><h3 class="chev"><span>Mobile banking</span></h3>
                         <p> <strong>New technologies that improve the customer experience</strong><br>
                                 Tuesday, September 17<br>
                                 4:00 pm to 5:00 pm<br>
@@ -60,7 +60,7 @@
                                 gamification and social media to improve the customer
                                 experience. </p>
                         <td>&nbsp;</td>
-                        <td class="blocks mini ribron"><h3><span>Risk management</span></h3>
+                        <td class="blocks mini ribron"><h3 class="chev"><span>Risk management</span></h3>
                             <p> <strong>From grapple to grip</strong><br>
                                 Wednesday, September 18<br>
                                 2:00 pm to 3:00 pm<br>
