--- a/pages/nav.html
+++ b/pages/nav.html
@@ -25,9 +25,8 @@
             <section class="port">
                 <article>
                     <h2>SEPTEMBER 1 – 19, 2013</h2>
-                    <img class="banner" src="../images/mobile/booth_hi.png">
+                    <img class="banner" src="../images/mobile/tedx_hi.png">
                     <nav>
-                        <!--  --> <a href="./home.html">Welcome</a>
                         <!--  --> <a href="./booth.html">Visit Our Booth</a>
                         <!--  --> <a href="./events.html">Calendar of Events</a>
                         <!--  --> <a href="./speakers.html">Sibos Speakers</a>
@@ -39,7 +38,7 @@
             </section>
             <footer>
                 <img class="reins" src="../images/header/reins.png" alt="">
-                <p><a>Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                <p><a href="home.html">Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
 
