--- a/pages/nav.html
+++ b/pages/nav.html
@@ -37,7 +37,7 @@
                 </article>
             </section>
             <footer>
-                <img class="reins" src="../images/header/reins.png" alt="">
+                <img class="reins" src="../images/header/reins-mini.png" alt="">
                 <p><a href="home.html">Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
