--- a/pages/about.html
+++ b/pages/about.html
@@ -71,8 +71,7 @@
                     <tr>
                         <td class="mini"><p><strong>Our global presence includes: </strong></p>
                             <ul>
-                                <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
-                                    Hong Kong, <br>
+                                <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC, Hong Kong,
                                     London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
                                 <li>More than 3,000 team members covering the global needs of our clients</li>
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
