--- a/pages/events.html
+++ b/pages/events.html
@@ -41,7 +41,7 @@
                 </section>
                 <table>
                     <tr>
-                        <td colspan="5" class="mini"><h2>Sibos Events</h2>
+                        <td colspan="5" class="mini"><h2>Calendar of Events</h2>
                             <p>Renew friendships and create new ones.
                                 We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
                                 most prestigious landmark – Burj Khalifa – the tallest structure in the world.
@@ -61,7 +61,9 @@
                             <p><strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
                                 Wells Fargo booth No. F87, <br>
-                                Exhibition Hall Zone B </p>
+                                Exhibition Hall Zone B <br>
+                                <a href="http://www.wellsfargomedia.com/whl/1047431/index.html">View invitation</a>
+                            </p>
                         </td>
                         <td>&nbsp;</td>
                         <td class="blocks mini"><h3 class="chev"><span>Speaker Series</span></h3>
@@ -69,13 +71,12 @@
                                 <strong>7:30 a.m. to 8:30 a.m.</strong><br>
                                 Wells Fargo Sibos Executive Speaker Series: “Rapidly Evolving Payment and Trade Corridors&rdquo;<br>
                                 <a href="http://www.wellsfargomedia.com/whl/998426/email.html">View invitation</a>
+                            </p>
                         </td>
                     </tr>
                     <tr>
                         <td colspan="5" class="mini"><p>&nbsp;</p>
-                            <p>Please contact your Wells Fargo
-                                GFI relationship manager for more details.</p>
-                            <p><strong>We hope you can join us at one of these events.</strong></p></td>
+                            <p><strong>If you are interested in attending any of our events, please speak to your GFI relationship manager.</strong></p></td>
                     </tr>
                     <tr>
                         <td width="33%">&nbsp;</td>
