enable mobile banner

--- a/pages/nav.html
+++ b/pages/nav.html
@@ -25,7 +25,14 @@
             <section class="port">
                 <article>
                     <h2>SEPTEMBER 1 – 19, 2013</h2>
-                    <img class="banner" src="../images/mobile/tedx_hi.png">
+                    <section id="Banner">
+                        <img class="fade bnr8" src="../images/mobile/booth_hi.png"         alt="booth_hi">
+                        <img class="fade bnr7" src="../images/mobile/momentum_hi.png"      alt="momentum_hi">
+                        <img class="fade bnr6" src="../images/mobile/tedx_hi.png"          alt="Come watch the TEDxUNPlaza conference from the Wells Fargo booth Tuesday through Thursday.">
+                        <img class="fade bnr3" src="../images/mobile/giveaway_hi.png"      alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                        <img class="fade bnr2" src="../images/mobile/pony_hi.png"          alt="Share your pony story with us #WFPony">
+                        <img class="fade bnr1" src="../images/mobile/booth_hi.png"         alt="foo" style="visibility: hidden;">
+                    </section>
                     <nav>
                         <!--  --> <a href="./booth.html">Visit Our Booth</a>
                         <!--  --> <a href="./events.html">Calendar of Events</a>
