--- a/pages/booth.html
+++ b/pages/booth.html
@@ -16,6 +16,7 @@
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
         <script src="../scripts/load.js"></script>
+        <script src="http://w.sharethis.com/button/buttons.js"></script>
     </head>
     <body>
         <div id="Page">
@@ -87,8 +88,8 @@
                         <!--  --> <span id="st_email"></span>
                         <!--  --> <span id="st_facebook"></span>
                         <!--  --> <span id="st_googleplus"></span>
-                        <!--  --> <span id="st_pinterest"></span>
                     </p>
+                    <script src="../scripts/share.js"></script>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
