detect device on index visit

--- a/pages/mini.html
+++ b/pages/mini.html
@@ -24,7 +24,7 @@
         <div id="Page">
             <header>
                 <div class="mast">
-                    <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
+                    <a href="./"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
                     <a href="//wellsfargo.com"><img class="stage" src="../images/header/stagecoach.png" alt="Together we’ll go far"></a>
                 </div>
                 <nav>
