--- a/pages/index.html
+++ b/pages/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="Refresh" content="0; URL=./home.html" />
+<meta charset="UTF-8">
+<script src="../lib/detect.js"></script>
+<script>
+    var str = 'Looks like you’re using a mobile browser. Would you like to visit the mobile version of this site?';
+
+    if (!_mobile()) {
+        W.location = 'home.html';
+    } else {
+        if (W.confirm(str)){
+            W.location = 'mini.html'
+        } else {
+            W.location = 'home.html';
+        }
+    }
+</script>
