post deploy tweaks

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<meta http-equiv="Refresh" content="0; URL=./pages/" />
+<script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+<meta http-equiv="Refresh" content="1; URL=./pages/" />
 <!--<meta http-equiv="Refresh" content="0; URL=http://www.wellsfargomedia.com/sibos2013/pages/home.html" />-->
