--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
+<script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
 <script src="../lib/detect.js"></script>
 <script>
     var str = 'Looks like you’re using a mobile browser. Would you like to visit the mobile version of this site?';
