--- a/pages/nav.html
+++ b/pages/nav.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8">
+        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
         <title>navport</title>
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
@@ -48,8 +49,5 @@
                 <p><a href="home.html">Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
-
-        <img src="../mini.png" width="496" height="531" alt="Mini" style="margin: auto; display: block;">
-
     </body>
 </html>
