modularize post nav load

--- a/pages/_nav.html
+++ b/pages/_nav.html
@@ -21,7 +21,10 @@
         <div id="Mobile" class="dev">
             <header>
                 <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
-                <h1>Sibos Dubai <img class="share" title="share" src="../images/misc/share.png"></h1>
+                <h1>Sibos Dubai
+                    <img class="share" title="Reveal sharing" src="../images/misc/share.png">
+                    <img class="home" title="Main navigation" src="../images/misc/home.png">
+                </h1>
             </header>
             <section class="port">
                 <article>
