clean up Page display

--- a/pages/mini.html
+++ b/pages/mini.html
@@ -23,10 +23,7 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-
-
-
-        <div id="Page">
+        <div id="Page" class="hide">
             <header>
                 <div class="mast">
                     <a href="./"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
@@ -43,8 +40,6 @@
                 </nav>
             </header>
         </div>
-
         <div id="Mobile"></div>
-
     </body>
 </html>
