--- a/pages/explore.html
+++ b/pages/explore.html
@@ -47,11 +47,12 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="mini"><p>Located on the southern shore of the Arabian Gulf, Dubai is the
+                        <td class="mini"><p>Located on the southern shore of the Arabian Gulf, Dubai is the
                                 second-largest of the seven Emirates that make up the United Arab Emirates.
                                 This thriving metropolis of over two million residents features architecture
                                 and attractions that rival the best that the rest of the world has to offer. </p>
                             <p><strong>While in Dubai, you may want to visit:</strong></p></td>
+                        <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
