compact share markup

--- a/pages/mini.html
+++ b/pages/mini.html
@@ -41,5 +41,10 @@
             </header>
         </div>
         <div id="Mobile"></div>
+        <div id="Share">
+            <p class="cap">Share this page
+                <span class="st_twitter"></span> <span class="st_linkedin"></span> <span class="st_email"></span> <span class="st_facebook"></span> <span class="st_googleplus"></span>
+            </p>
+        </div>
     </body>
 </html>
