--- a/pages/home.html
+++ b/pages/home.html
@@ -113,11 +113,7 @@
             <footer>
                 <div id="Share">
                     <p class="cap">Share this page
-                        <!--  --> <span id="st_twitter"></span>
-                        <!--  --> <span id="st_linkedin"></span>
-                        <!--  --> <span id="st_email"></span>
-                        <!--  --> <span id="st_facebook"></span>
-                        <!--  --> <span id="st_googleplus"></span>
+                        <span class="st_twitter"></span> <span class="st_linkedin"></span> <span class="st_email"></span> <span class="st_facebook"></span> <span class="st_googleplus"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
