mobilize share functions

--- a/pages/mini.html
+++ b/pages/mini.html
@@ -9,7 +9,7 @@
         <!--  -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
@@ -41,10 +41,6 @@
             </header>
         </div>
         <div id="Mobile"></div>
-        <div id="Share">
-            <p class="cap">Share this page
-                <span class="st_twitter"></span> <span class="st_linkedin"></span> <span class="st_email"></span> <span class="st_facebook"></span> <span class="st_googleplus"></span>
-            </p>
-        </div>
+        <div id="Share"><span class="st_twitter_large"></span><span class="st_linkedin_large"></span><span class="st_email_large"></span><span class="st_facebook_large"></span><span class="st_googleplus_large"></span></div>
     </body>
 </html>
