--- a/pages/_nav.html
+++ b/pages/_nav.html
@@ -49,7 +49,7 @@
             </section>
             <footer>
                 <img class="reins" src="../images/header/reins-mini.png" alt="">
-                <p><a href="home.html">Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                <p><strong><a href="home.html">Full site</a> | Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
     </body>
