--- a/pages/_nav.html
+++ b/pages/_nav.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title>navport</title>
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
