--- a/pages/about.html
+++ b/pages/about.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title id="head0">Wells Fargo at Sibos 2013</title>
         <script src="../scripts/metas.js"></script>
         <!--  -->
