--- a/pages/home.html
+++ b/pages/home.html
@@ -32,6 +32,7 @@
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
                     <!--  --> <a href="./giving.html">Charitable Giving</a>
+                    <!--  --> <a href="./photos.html">Photos</a>
                 </nav>
             </header>
             <div id="Feature">
