--- a/pages/photos.html
+++ b/pages/photos.html
@@ -6,10 +6,6 @@
         <title id="head0">Wells Fargo at Sibos 2013</title>
         <script src="../scripts/metas.js"></script>
         <!--  -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-        <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <!--  -->
@@ -22,7 +18,7 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-        <div id="Page" class="hide">
+        <div id="Page">
             <header>
                 <div class="mast">
                     <a href="./"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
@@ -39,8 +35,28 @@
                     <!--  --> <a href="./photos.html">Photos</a>
                 </nav>
             </header>
+            <div id="Feature">
+                <section id="Banner">
+                    <img class="" src="../images/banners/boothPage.jpg" alt="">
+                    <img class="reins small" src="../images/header/reins.png" alt="">
+                </section>
+                <article class="mini">
+                </article>
+            </div>
+            <footer>
+                <div id="Share">
+                    <p class="cap">Share this page
+                        <span class="st_twitter"></span> <span class="st_linkedin"></span> <span class="st_email"></span> <span class="st_facebook"></span> <span class="st_googleplus"></span>
+                    </p>
+                </div>
+                <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
+            </footer>
+        </div>
+        <div class="popup">
+            <img id="booth_map" src="../images/photos/booth_map.gif" width="1000" tabindex="-1">
+            <br>
+            CLICK OUTSIDE IMAGE TO CLOSE
         </div>
         <div id="Mobile"></div>
-        <div id="Share"><span class="st_twitter_large"></span><span class="st_linkedin_large"></span><span class="st_email_large"></span><span class="st_facebook_large"></span><span class="st_googleplus_large"></span></div>
     </body>
 </html>
